[変更/修正]研究速度画面に機能を追加・ユニット名、閣僚画面での不具合を修正
・閣僚の登場年の設定次第でエディタがクラッシュする不具合を解消
・ユニット名画面にd_rsv_33-40とd_01-99の師団名を扱う能力を追加
・研究機関の使用可能年を考慮するオプションを追加

--- a/HoI2Editor/HoI2Editor.csproj
+++ b/HoI2Editor/HoI2Editor.csproj
@@ -55,6 +55,9 @@
     <StartupObject>
     </StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -341,6 +344,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ModelNameEditorForm.resx">
       <DependentUpon>ModelNameEditorForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProvinceEditorForm.ja.resx">
       <DependentUpon>ProvinceEditorForm.cs</DependentUpon>
@@ -389,6 +393,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UnitNameEditorForm.resx">
       <DependentUpon>UnitNameEditorForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -436,6 +441,18 @@
     <Content Include="Documents\Jp\readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>cd $(SolutionDir)..\
+mkdir HoI2Editor
+mkdir HoI2Editor\ja
+del HoI2Editor\* /q
+rd /s /q HoI2Editor\ja
+copy $(TargetPath) HoI2Editor\$(TargetFileName)
+echo D | xcopy $(TargetDir)\ja HoI2Editor\ja
+copy $(ProjectDir)\Documents\Jp\*.txt HoI2Editor\
+del HoI2Editor.zip /q
+"C:\Program Files (x86)\Lhaplus\Lhaplus.exe" /c:zip /o:.\ .\HoI2Editor</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
