Added event tab to scenario editor form
Event tab
1) Display events by country
2) Navigates by events
3) Get free event ID
4) Add auto comments in event files (based on event name tag)

--- a/HoI2Editor/HoI2Editor.csproj
+++ b/HoI2Editor/HoI2Editor.csproj
@@ -421,6 +421,7 @@
     <EmbeddedResource Include="Properties\Resources.ja.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Documents\Design\commands.xlsx" />
     <None Include="Documents\Design\misc.xlsx" />
     <None Include="Documents\Design\miscedit.xlsx" />
