--- a/HoI2Editor/HoI2Editor.csproj
+++ b/HoI2Editor/HoI2Editor.csproj
@@ -225,6 +225,7 @@
     </Compile>
     <Compile Include="HoI2EditorController.cs" />
     <Compile Include="HoI2EditorSettings.cs" />
+    <Compile Include="Models\Action.cs" />
     <Compile Include="Models\Branches.cs" />
     <Compile Include="Models\Command.cs" />
     <Compile Include="Models\Commands.cs" />
